# ESP32-mmWave-APIdriver

./: .env.example  .gitignore  CMakeLists.txt  README.md
components/mqtt_client_app/: CMakeLists.txt  mqtt_app.c  mqtt_event.c  mqtt_event.h
components/mqtt_client_app/include/: mqtt_app.h  mqtt_event.h  mqtt_types.h
components/mr24hpc/: CMakeLists.txt
components/mr24hpc/include/: mr24hpc.h  mr24hpc_types.h  mr24hpc_types_uof.h
components/mr24hpc/private_include/: mr24hpc_frame_parser.h  mr24hpc_parser.h  mr24hpc_standard.h  mr24hpc_state_update.h  mr24hpc_uof.h
components/mr24hpc/src/: frame_parser.c  handle_frame_standard.c  handle_frame_uof.c  internal.h  mr24hpc.c  mr24hpc_frame_parser.c  mr24hpc_parser.c  mr24hpc_standard.c  mr24hpc_state_update.c  mr24hpc_uof.c  parser.c  state_update.c
components/mr24hpc_uart/: CMakeLists.txt  mr24hpc_uart_esp32.c  uart.c
components/mr24hpc_uart/include/: mr24hpc_uart.h
components/wifi_manager/: CMakeLists.txt  wifi_manager.c
components/wifi_manager/include/: wifi_manager.h
main/: CMakeLists.txt  app_main.c  sensor_logger.c  sensor_logger.h  sensor_state_tracker.c  sensor_state_tracker.h
